[FEAT] feed부분 tableView구현

--- a/SOPT30th-Assignment/Instagram/Instagram/Home/Home.storyboard
+++ b/SOPT30th-Assignment/Instagram/Instagram/Home/Home.storyboard
@@ -77,12 +77,8 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="obf-H8-2wM">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="1200"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="900"/>
                                         <subviews>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MhO-hU-QEd">
-                                                <rect key="frame" x="0.0" y="507" width="414" height="673"/>
-                                                <color key="backgroundColor" systemColor="systemGreenColor"/>
-                                            </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Mht-6h-uUf">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="87"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -106,17 +102,21 @@
                                                     </collectionViewCell>
                                                 </cells>
                                             </collectionView>
+                                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="A9C-WC-Llv">
+                                                <rect key="frame" x="0.0" y="87" width="414" height="813"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            </tableView>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="A9C-WC-Llv" firstAttribute="leading" secondItem="obf-H8-2wM" secondAttribute="leading" id="8Kb-0J-tR1"/>
                                             <constraint firstAttribute="trailing" secondItem="Mht-6h-uUf" secondAttribute="trailing" id="Bvl-ov-Xfq"/>
                                             <constraint firstItem="Mht-6h-uUf" firstAttribute="leading" secondItem="obf-H8-2wM" secondAttribute="leading" id="FuV-kU-3ML"/>
-                                            <constraint firstAttribute="height" constant="1200" id="Hnu-55-toH"/>
-                                            <constraint firstAttribute="bottom" secondItem="MhO-hU-QEd" secondAttribute="bottom" constant="20" id="Ixt-Se-102"/>
-                                            <constraint firstItem="MhO-hU-QEd" firstAttribute="top" secondItem="Mht-6h-uUf" secondAttribute="bottom" constant="420" id="LPS-fZ-EeE"/>
-                                            <constraint firstAttribute="trailing" secondItem="MhO-hU-QEd" secondAttribute="trailing" id="dSv-dE-6BO"/>
+                                            <constraint firstAttribute="height" constant="900" id="Hnu-55-toH"/>
+                                            <constraint firstItem="A9C-WC-Llv" firstAttribute="top" secondItem="Mht-6h-uUf" secondAttribute="bottom" id="Iba-Mm-E2i"/>
+                                            <constraint firstAttribute="trailing" secondItem="A9C-WC-Llv" secondAttribute="trailing" id="ZX4-Li-PQN"/>
                                             <constraint firstItem="Mht-6h-uUf" firstAttribute="top" secondItem="obf-H8-2wM" secondAttribute="top" id="fnm-Wp-j3S"/>
-                                            <constraint firstItem="MhO-hU-QEd" firstAttribute="leading" secondItem="obf-H8-2wM" secondAttribute="leading" id="nzy-gi-MFM"/>
+                                            <constraint firstAttribute="bottom" secondItem="A9C-WC-Llv" secondAttribute="bottom" id="fs0-3S-O4Z"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -132,7 +132,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
-                        <color key="backgroundColor" systemColor="systemTealColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="BCz-vt-Gtz" secondAttribute="trailing" id="0hQ-QR-KkS"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Zuz-2y-zWb" secondAttribute="trailing" id="5J0-Xg-LPU"/>
@@ -145,6 +145,7 @@
                     </view>
                     <size key="freeformSize" width="414" height="896"/>
                     <connections>
+                        <outlet property="feedTableView" destination="A9C-WC-Llv" id="x43-rs-BuF"/>
                         <outlet property="storyCollectionView" destination="Mht-6h-uUf" id="oNQ-bd-IdK"/>
                     </connections>
                 </viewController>
@@ -160,12 +161,6 @@
         <image name="insta_logo.png" width="175" height="50"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemTealColor">
-            <color red="0.18823529411764706" green="0.69019607843137254" blue="0.7803921568627451" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
