--- a/SOPT30th-Assignment/Instagram/Instagram/Base.lproj/Main.storyboard
+++ b/SOPT30th-Assignment/Instagram/Instagram/Base.lproj/Main.storyboard
@@ -53,23 +53,28 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="DNa-16-g46">
-                                <rect key="frame" x="102" y="501.5" width="209" height="31"/>
+                                <rect key="frame" x="123" y="501.5" width="168" height="47.5"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="계정이 없으신가요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKG-Bd-CfG">
-                                        <rect key="frame" x="0.0" y="0.0" width="130.5" height="31"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" insetsLayoutMarginsFromSafeArea="NO" text="계정이 없으신가요?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKG-Bd-CfG">
+                                        <rect key="frame" x="0.0" y="0.0" width="108" height="47.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZe-Rn-0Wb">
-                                        <rect key="frame" x="135.5" y="0.0" width="73.5" height="31"/>
+                                        <rect key="frame" x="113" y="0.0" width="55" height="47.5"/>
                                         <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="가입하기"/>
+                                        <buttonConfiguration key="configuration" style="plain" title="가입하기">
+                                            <fontDescription key="titleFontDescription" type="system" pointSize="14"/>
+                                        </buttonConfiguration>
                                         <connections>
                                             <action selector="signupButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aAB-gX-cOM"/>
                                         </connections>
                                     </button>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="168" id="fHw-3e-pcL"/>
+                                </constraints>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zG5-zm-Nc1">
                                 <rect key="frame" x="16" y="421.5" width="382" height="44"/>
@@ -83,7 +88,7 @@
                                 </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="xmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="7jP-hh-n4I">
-                                <rect key="frame" x="329" y="260.5" width="59" height="26"/>
+                                <rect key="frame" x="329" y="262.5" width="59" height="26"/>
                                 <color key="tintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="27" id="eO6-sW-d3n"/>
@@ -104,9 +109,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="DNa-16-g46" firstAttribute="top" secondItem="zG5-zm-Nc1" secondAttribute="bottom" constant="36" id="0ji-ff-0Ce"/>
-                            <constraint firstItem="7jP-hh-n4I" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="4vk-cA-F8z"/>
-                            <constraint firstItem="7jP-hh-n4I" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="260" id="CsB-qF-DOo"/>
-                            <constraint firstItem="DNa-16-g46" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="102" id="H0Q-FZ-IhY"/>
+                            <constraint firstItem="DNa-16-g46" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CUM-yr-sZH"/>
+                            <constraint firstItem="7jP-hh-n4I" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="262" id="CsB-qF-DOo"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zG5-zm-Nc1" secondAttribute="trailing" constant="16" id="JFS-yl-Dep"/>
                             <constraint firstItem="yK3-iX-4er" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="100" id="K8c-lh-iO1"/>
                             <constraint firstItem="zG5-zm-Nc1" firstAttribute="top" secondItem="K9z-Ch-eYB" secondAttribute="bottom" constant="33" id="MBu-wq-zbT"/>
@@ -114,7 +118,6 @@
                             <constraint firstItem="K9z-Ch-eYB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="TZ8-k4-wT3"/>
                             <constraint firstItem="yK3-iX-4er" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="170" id="Tb5-de-O8O"/>
                             <constraint firstItem="7jP-hh-n4I" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="329" id="YeE-Eg-Dor"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="DNa-16-g46" secondAttribute="trailing" constant="103" id="bEP-3g-JoN"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="7jP-hh-n4I" secondAttribute="trailing" constant="26" id="eyG-5h-8wF"/>
                             <constraint firstItem="WbI-GL-D2b" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="326" id="koJ-bu-sqB"/>
                             <constraint firstItem="K9z-Ch-eYB" firstAttribute="top" secondItem="yK3-iX-4er" secondAttribute="bottom" constant="34" id="lRI-LM-OyA"/>
@@ -327,10 +330,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8cr-4V-qxN">
-                                <rect key="frame" x="114" y="505.5" width="187" height="18"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="18" id="lZX-7t-jdw"/>
-                                </constraints>
+                                <rect key="frame" x="124.5" y="505.5" width="165" height="31"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="다른 계정으로 로그인하기">
                                     <fontDescription key="titleFontDescription" type="system" pointSize="14"/>
@@ -341,9 +341,8 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="FZ8-gR-UWz" firstAttribute="trailing" secondItem="djw-Z7-mhQ" secondAttribute="trailing" constant="34" id="Cmu-a6-MJF"/>
+                            <constraint firstItem="8cr-4V-qxN" firstAttribute="centerX" secondItem="u5O-91-RYx" secondAttribute="centerX" id="VQm-tc-fjy"/>
                             <constraint firstItem="djw-Z7-mhQ" firstAttribute="top" secondItem="FZ8-gR-UWz" secondAttribute="top" constant="310" id="Zcv-YP-Iy0"/>
-                            <constraint firstItem="FZ8-gR-UWz" firstAttribute="trailing" secondItem="8cr-4V-qxN" secondAttribute="trailing" constant="113" id="hhe-m8-etf"/>
-                            <constraint firstItem="8cr-4V-qxN" firstAttribute="leading" secondItem="FZ8-gR-UWz" secondAttribute="leading" constant="114" id="jAX-wh-1sS"/>
                             <constraint firstItem="8cr-4V-qxN" firstAttribute="top" secondItem="djw-Z7-mhQ" secondAttribute="bottom" constant="18" id="t1V-5t-3Xs"/>
                             <constraint firstItem="djw-Z7-mhQ" firstAttribute="leading" secondItem="FZ8-gR-UWz" secondAttribute="leading" constant="35" id="uDu-Bm-2Hd"/>
                         </constraints>
